*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===

=== 1.0.3 ===
* Added support of C++ 11 standard.
* Fixed compilation for Windows.
* Updated dependencies.
* Updated build scripts.

=== 1.0.2 ===
* Updated build scripts.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Updated build scripts.
* Updated signature of pphash::keys, pphash::values and pphash::items methods
  to const.

=== 0.5.7 ===
* Disabled copy constructor for bitset.
* Updated build system.

=== 0.5.6 ===
* Updated sort interface functions for darray and parray.
* Updated build system.

=== 0.5.5 ===
* Better support of <stdlib.h> qsort_r() calls for different platforms.

=== 0.5.4 ===
* Added set_n to lltl::parray and lltl::darray with index specification.
* Added qsort() methods for lltl::parray and lltl::darray.

=== 0.5.3 ===
* Added lltl::bitset collection with basic methods for storing bit flags.
* Added lltl::phashset collection for quick managing of hash sets of objects.
* Added lltl::ptr_hash_func and lltl::ptr_cmp_func functions for managing
  object pointers which are considered to be unique for each object.
* Added contains() method to lltl::parray and lltl::darray collections.
* Added lltl::iterator class for work with iterators.
* Renamed copy function reference to clone for lltl::allocator_iface.
* Renamed lltl::char_copy_func to lltl::char_clone_func. 
* Updated build files to support producing of static library and pkgconfig files.
* Updated headers to conform with LGPL3+ license.
* Updated build scripts that now use tags without prefixes first.

=== 0.5.2 ===
* Added hash interface for objects.
* Added default hashing function.
* Implemented lltl::pphash collection which allows to use hash maps.
* Added is_empty() method to lltl::parray class.
* Fixed upget() method of lltl::parray.

=== 0.5.1 ===