@@ -3,6 +3,9 @@
 *******************************************************************************
 
 === 1.0.4 ===
+* Updated improper implementation of several const-methods for the lltl::parray
+  collection.
+* Added pphash::key method to obtain constant pointer for the allocated key.
 
 === 1.0.3 ===
 * Added support of C++ 11 standard.
